Changed titles of Webpages

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
+{% block title %}
+<title>CASA-Signin</title>
+{% endblock title %}
 {% block content %}
   <section id="login" class="bg-light py-5">
     <div class="container">
