--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,9 @@
   <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
   <!-- Custom -->
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  {% block title %}
   <title>CASA</title>
+  {% endblock title %}
 <link rel="shortcut icon" type="image/x-icon" href=" {% static 'img/favicon.ico' %}">
 </head>
 <body>
