--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+<title>CASA-About</title>
+{% endblock title %}
 {% block content %}
   <section id="showcase-inner" class="py-5 text-white">
     <div class="container">
