--- a/templates/accounts/logout.html
+++ b/templates/accounts/logout.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
+{% block title %}
+<title>CASA-Logged Out</title>
+{% endblock title %}
 {% block content %}
     <section id="showcase-inner" class="py-5 text-white">
     <div class="container">
