--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
+{% block title %}
+<title>CASA-Register Account</title>
+{% endblock title %}
 {% block content %}
   <section id="register" class="bg-light py-5">
     <div class="container">
