--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load humanize %}
-
+{% block title %}
+<title>CASA-{{listing.title}}</title>
+{% endblock title %}
 {% block content %}
   <section id="showcase-inner" class="py-5 text-white">
     <div class="container">
