--- a/templates/listings/search.html
+++ b/templates/listings/search.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load humanize %}
+{% block title %}
+<title>CASA-Search</title>
+{% endblock title %}
 {% block content %}
 <section id="showcase-inner" class="showcase-search text-white py-5">
     <div class="container">
